# Very-Unstandard-Library

./: .gitignore  CMakeLists.txt  Objectives.txt  README.md  Reflection.c  Reflection.h  TGeneric.c  TGeneric.h  TObject.c  TObject.h  TPair.h  TString.c  TString.h  TTypes.h  TVariant.c  TVariant.h  Test.py  Utility.c  Utility.h  VMemory.c  VMemory.h  Vutd_Core.h  Vutd_Macros.h
Containers/: It_Array.c  It_Array.h  TArray.c  TArray.h  TC_Allocator.c  TC_Allocator.h  TContainer.c  TContainer.h  TDoubly_Linked_List.c  TDoubly_Linked_List.h  TIterator.c  TIterator.h  TLinked_List.c  TLinked_List.h  TMap.c  TMap.h  TTree.c  TTree.h  TTuple.c  TTuple.h  TVector.c  TVector.h
Examples/: Examples.c
Unit_Tests/: TTree_Test.c  TTree_Test.h  Unit_Tests.c  Unit_Tests.h
